deploy/kubernetes/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: infervoyage-dev
  labels:
    app: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
    - name: metrics
      port: 9121
      targetPort: metrics
  selector:
    app: redis
  type: ClusterIP
